--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
   "homepage": "https://github.com/skeller88/hello-d3",
   "dependencies": {
     "d3": "^3.5.6",
+    "express": "^4.13.3",
     "node-static": "^0.7.7",
-    "nodemon": "^1.7.1"
+    "nodemon": "^1.7.1",
+    "serve-static": "^1.10.0"
   }
 }
